Use virtual thread in the shutdown hook